# kinglet

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
arch/aarch64/: Cargo.toml  build.rs  raspberry_img.sh
arch/aarch64/.cargo/: config.toml
arch/aarch64/src/: cpu.rs  entry.s  kinglet.ld  main.rs  start.rs
drivers/: Cargo.toml
drivers/src/: console.rs  gpio.rs  lib.rs  mmio.rs  serial.rs
drivers/src/gpio/: raspi.rs
drivers/src/serial/: raspi.rs
kernel/: Cargo.toml
klib/: Cargo.toml
klib/src/: lib.rs  sr.rs
src/: panic.rs
