[package]
name = "kinglet"
version = "0.0.1"
edition = "2021"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/kinglet"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

