[workspace]
members = [
  "arch/aarch64",
  "drivers",
  "kernel",
  "klib"
]
resolver="2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/kinglet"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

